# AscendFast

./: .gitignore  CLAUDE.md  _probe.py  _probe.sh  _run_probe_load.sh  agent_client.py  analysis.py  apply.py  benchmark.py  correctness.py  dataset.py  mode_store.py  models.py  operator_gen.py  optimization.py  optimization_api.md  profile.py  profile_npu.py  profile_runner.py  pyproject.toml  run_in_env.sh  run_loadopt_verify.sh  sitecustomize.py  strategy.py  trace_store.py  verify.py  workspace_loader.py
.claude/: settings.local.json
.claude/agents/: analysis-agent.md  apply-agent.md  operator-agent.md  optimization-agent.md  profile-agent.md  strategy-agent.md
docs/adr/: ADR-0001.md  ADR-0002.md  ADR-0003.md  ADR-0004.md  ADR-0005.md  ADR-0006.md  ADR-0007.md  ADR-0008.md
docs/rfc/: RFC-0001.md
gov/adr/: ADR-0001-unified-recursive-node-with-no-first-round-special-case.toml  ADR-0002-dual-latency-metrics-benchmark-for-speedup-profile-for-diagnosis-only.toml  ADR-0003-correctness-compared-against-baseline-golden-not-parent-mode.toml  ADR-0004-self-contained-executionmode-workspace-with-build-model-entrypoint.toml  ADR-0005-four-canonical-optimization-levers-as-single-source-of-truth.toml  ADR-0006-agent-responsibility-separation-what-why-versus-how.toml  ADR-0007-observability-layer-with-stage-outcomes-and-decision-gates.toml  (+3 more)
gov/rfc/RFC-0001/: rfc.toml
kernels/: registry.json
scripts/: _hf_common.py  ascend-env.sh  check-ascend-runtime.sh  download_hf_model.py  get_model_info.py  list_hf_models.py  profile_hf_causal_lm_npu.py
tests/: test_trace_store.py
(+124 files in other folders)
